# rustbar

./: Cargo.toml  applescript.scpt
src/: cli.rs  lib.rs  main.rs  math.rs  redis_db.rs  server.rs  util.rs
src/ticker/: binance.rs  cmc.rs  mod.rs
