[package]
name = "rustbar"
version = "0.3.0"
authors = ["Jonathan Dizdarevic <dizzda@gmail.com>"]

[dependencies]
reqwest = "^0.8.8"
serde_derive = "1.0.78"
serde = "1.0.78"
serde_json = "1.0.30"
separator = "0.3.1"
clap = "2.32.0"
hyper = "0.12"
osascript = "0.3.0"
actix-web = "0.7"
lazy_static = "1.1.0"